wrote redirects for pages still under construction

--- a/src/index.html
+++ b/src/index.html
@@ -488,13 +488,13 @@
         </p>
         <div class="flex gap-4">
           <a
-            href="./pages/buyerSignup.html"
+            href="./pages/signup.html"
             class="px-6 py-3 bg-black text-white rounded-full hover:bg-black/80 transition"
           >
             Explore Collections
           </a>
           <a
-            href="./pages/signup.html"
+            href="./pages/sellerSignup.html"
             class="px-6 py-3 border border-gray-400 rounded-full hover:bg-gray-100 transition"
           >
             Join Us
@@ -613,7 +613,7 @@
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='./pages/redirect.html'"
+              onclick="window.location.href='./'"
               class="absolute inset-0 flex items-center cursor-pointer justify-center bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -625,7 +625,7 @@
           <p class="text-gray-600 text-lg mt-1">₦660,700</p>
           <div>
             <button
-              onclick="window.location.href='./pages/redirect.html'"
+              onclick="window.location.href='./'"
               class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
             >
               Get
@@ -642,7 +642,7 @@
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='./pages/redirect.html'"
+              onclick="window.location.href='./'"
               class="absolute inset-0 flex items-center justify-center cursor-pointer bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -653,7 +653,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦70,000</p>
           <button
-            onclick="window.location.href='./pages/redirect.html'"
+            onclick="window.location.href='./'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -669,7 +669,7 @@
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='./pages/redirect.html'"
+              onclick="window.location.href='./'"
               class="absolute inset-0 flex items-center justify-center bg-black/60 cursor-pointer text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -680,7 +680,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦205,000</p>
           <button
-            onclick="window.location.href='./pages/redirect.html'"
+            onclick="window.location.href='./'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -1025,7 +1025,7 @@
     </footer>
 
     <!-- Mailing list modal -->
-    <!-- <section
+    <section
       id="mailModal"
       class="fixed hidden inset-0 bg-black/60 z-100 justify-center items-center px-4 opacity-0 scale-95 transition-all duration-300"
     >
@@ -1087,7 +1087,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
