--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -221,23 +221,8 @@
       <!-- Error Display Component -->
       <div
         id="error-display"
-        class="fixed hidden right-2 md:right-10 bottom-2 md:bottom-8 w-fit items-center py-3 px-3 rounded-lg [transition:all_0.5s_ease] border-solid border border-[#f85149] text-[#b22b2b] [&amp;_svg]:text-[#b22b2b] group bg-[linear-gradient(#f851491a,#f851491a)]"
+        class="fixed hidden text-xs right-2 md:right-10 bottom-2 md:bottom-8 w-fit items-center py-3 px-3 rounded-lg [transition:all_0.5s_ease] border-solid border border-[#f85149] text-red-600 bg-[#ffdddd]"
       >
-        <p class="flex flex-row items-center mr-auto gap-x-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="14"
-            height="14"
-            viewBox="0 0 24 24"
-          >
-            <rect width="24" height="24" fill="none" />
-            <path
-              fill="#b22b2b"
-              d="M12 17q.425 0 .713-.288T13 16t-.288-.712T12 15t-.712.288T11 16t.288.713T12 17m-1-4h2V7h-2zm1 9q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4T6.325 6.325T4 12t2.325 5.675T12 20m0-8"
-            />
-          </svg>
-          <span class="text-xs font-medium"></span>
-        </p>
       </div>
     </section>
 
