--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -296,11 +296,8 @@
       <!-- Error Display Component -->
       <div
         id="error-display"
-        class="fixed hidden right-2 md:right-10 bottom-2 md:bottom-8 w-fit items-center py-3 px-3 rounded-lg [transition:all_0.5s_ease] border-solid border border-[#f85149] text-[#b22b2b] [&amp;_svg]:text-[#b22b2b] group bg-[linear-gradient(#f851491a,#f851491a)]"
+        class="fixed hidden text-xs right-2 md:right-10 bottom-2 md:bottom-8 w-fit items-center py-3 px-3 rounded-lg [transition:all_0.5s_ease] border-solid border border-[#f85149] text-red-600 bg-[#ffdddd]"
       >
-        <p class="flex flex-row items-center mr-auto gap-x-2">
-          <span class="text-xs font-medium"></span>
-        </p>
       </div>
     </section>
 
@@ -345,6 +342,7 @@
       class="fixed inset-0 bg-black/50 backdrop-blur-[2px] hidden overflow-hidden"
       id="overlay"
     ></div>
+
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <script type="module" src="../js/signup.js"></script>
   </body>
