--- a/src/pages/sellerLogin.html
+++ b/src/pages/sellerLogin.html
@@ -28,6 +28,41 @@
   </head>
 
   <body>
+    <!-- Just for testing -->
+    <div class="fixed inset-0 bg-black/70 z-10"></div>
+
+    <div
+      class="z-10 fixed top-1/2 left-1/2 -translate-1/2 bg-white rounded-lg shadow-lg px-10 py-8 max-w-md w-full hidde"
+    >
+      <div class="flex flex-col gap-3 items-center text-center">
+        <!-- icon -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="35"
+          height="35"
+          viewBox="0 0 24 24"
+          class="mb-2"
+        >
+          <rect width="24" height="24" fill="none" />
+          <path
+            fill="#ec0808"
+            d="m18.9 21l-5.475-5.475l2.1-2.1L21 18.9zM5.1 21L3 18.9L9.9 12l-1.7-1.7l-.7.7l-1.275-1.275v2.05l-.7.7L2.5 9.45l.7-.7h2.05L4 7.5l3.55-3.55q.5-.5 1.075-.725T9.8 3t1.175.225t1.075.725l-2.3 2.3L11 7.5l-.7.7L12 9.9l2.25-2.25q-.1-.275-.162-.575t-.063-.6q0-1.475 1.013-2.488t2.487-1.012q.375 0 .713.075t.687.225L16.45 5.75l1.8 1.8l2.475-2.475q.175.35.238.687t.062.713q0 1.475-1.012 2.488t-2.488 1.012q-.3 0-.6-.05t-.575-.175z"
+          />
+        </svg>
+
+        <h2 class="font-semibold text-md">
+          Sorry! This page is still under construction
+        </h2>
+        <button
+          onclick="window.location.href='https://made4you.vercel.app/'"
+          class="w-full bg-black text-white py-3 rounded-full font-medium hover:bg-gray-800 transition shadow-md cursor-pointer mt-3"
+        >
+          Go back Home
+        </button>
+      </div>
+    </div>
+    <!-- Test ends here -->
+
     <div
       class="relative flex min-h-screen w-full flex-col items-center bg-white group/design-root overflow-x-hidden text-[#1A1A1A]"
     >
@@ -112,14 +147,11 @@
                 <button
                   type="submit"
                   class="mt-4 flex h-14 w-full items-center justify-center rounded-full bg-[#1A1A1A] px-4 py-3 text-base font-bold text-white transition-colors hover:bg-black"
-                 
                 >
                   Let's Go
                 </button>
               </form>
-              <p
-                class="mt-4 text-center text-sm text-[#808080]"
-              >
+              <p class="mt-4 text-center text-sm text-[#808080]">
                 Don't have an account yet?
                 <a
                   class="font-medium text-[#1A1A1A] underline underline-offset-2 hover:text-gray-700"
@@ -135,9 +167,7 @@
         <div
           class="flex flex-col items-center justify-between gap-4 border-t border-solid border-gray-200 py-6 sm:flex-row"
         >
-          <p class="text-sm text-[#808080]">
-            © 2024 Aso. All rights reserved.
-          </p>
+          <p class="text-sm text-[#808080]">© 2024 Aso. All rights reserved.</p>
           <div class="flex items-center gap-6">
             <a
               class="text-sm text-[#808080] underline-offset-4 hover:text-black hover:underline"
